# PolarsPipeline

./: .dockerignore  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml
.astro/: config.yaml
containers/: Dockerfile  requirements.txt
dags/: polars_dag.py  polars_dag_delta.py
images/: architecture.excalidraw
notebooks/: data_processing.ipynb  test_func.ipynb
src/helpers/: utils.py
src/scripts/: etl.py  io.py  pipeline.py  schema.py  support.py  validation.py
